# termite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
host/: eq_bridge_profile.cpp  eq_bridge_profile.h  eq_bridge_protocol.h  eq_bridge_server.cpp  eq_bridge_server.h  route_bridge_protocol.h  route_bridge_server.cpp  route_bridge_server.h  termite.rc  termite_host.cpp  termite_host.h  termite_resource.h  windows_main.cpp
installer/: termite.iss
scripts/: bootstrap.ps1  common.psm1  package_release.ps1  termite.vsconfig  tooling_manifest.json
sound/: app_audio_policy.cpp  app_audio_policy.h  audio_pipeline.cpp  routing_policy.cpp  session_router.cpp  session_router.h  wasapi_audio_engine.cpp  wasapi_audio_engine.h
sound/eq/: eq_profile.cpp  eq_profile.h
src/app/: console_layout.cpp  console_layout.h  console_skin.cpp  console_skin.h  console_state.cpp  console_state.h  console_window.cpp  console_window.h  settings_store.cpp  settings_store.h  termite.rc  termite_elevation.props  windows_main.cpp
src/audio/: app_audio_policy.cpp  app_audio_policy.h  audio_pipeline.cpp  audio_pipeline.h  routing_policy.cpp  routing_policy.h  session_router.cpp  session_router.h  wasapi_audio_engine.cpp  wasapi_audio_engine.h
src/dsp/: eq_profile.cpp  eq_profile.h
tests/: test_audio_pipeline.cpp  test_console.cpp  test_eq_bridge.cpp  test_eq_profile.cpp  test_installer_layout.ps1
tools/: build_installer.ps1  make_release.ps1
ui/: .gitignore  BufferedChart.pas  Carbon.rc  MainForm.pas  RouteAppsDialog.pas  StyleCatalog.pas  TermiteBridge.pas  TermiteUI.dpr  TermiteUI.dproj  TermiteUI.manifest  copy_frontend.cmake  prepare_official_styles.ps1
